--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
+    "babel-plugin-typescript-to-proptypes": "^1.4.2",
     "cssnano": "^5.0.2",
+    "esbuild-loader": "^2.13.1",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
