--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "next build",
     "start": "next start",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "format": "prettier --write .",
     "type-check": "tsc --pretty --noEmit",
     "lint": "next lint",
@@ -19,33 +19,29 @@
   },
   "dependencies": {
     "@kachkaev/react-inline-js": "0.4.0",
-    "next": "^12.2.5",
-    "next-plugin-preact": "^3.0.7",
-    "preact": "^10.10.6",
-    "preact-render-to-string": "^5.2.2",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
-    "react-ssr-prepass": "npm:preact-ssr-prepass"
+    "next": "13.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.14",
-    "@types/react": "18.0.18",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
-    "autoprefixer": "10.4.8",
-    "cssnano": "5.1.13",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-react": "7.31.5",
-    "postcss": "8.4.16",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
+    "autoprefixer": "10.4.13",
+    "cssnano": "5.1.14",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.2",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-import": "2.27.4",
+    "eslint-plugin-react": "7.32.0",
+    "postcss": "8.4.21",
     "postcss-extend": "1.0.5",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-import": "15.0.0",
-    "postcss-preset-env": "7.8.0",
-    "prettier": "2.4.1",
-    "tailwindcss": "3.1.8",
-    "typescript": "4.8.2"
+    "postcss-import": "15.1.0",
+    "postcss-preset-env": "7.8.3",
+    "prettier": "2.8.2",
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.4"
   }
 }
