Add editor rulers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
         "typescriptreact",
         "javascript"
     ],
-    "npm.packageManager": "pnpm"
+    "npm.packageManager": "pnpm",
+    "editor.rulers": [110, 120]
 }
